# nautilus

./: .clang-format  .dockerignore  .gitignore  Justfile  README.md  README_IMPLEMENTATION.md  go.mod  go.sum  go.work  go.work.sum
.github/workflows/: release.yml
campaigns/: README.md  example_subnet_scan.yaml  fuzzing.yaml  iot-afl-fuzzing.yaml  iot-black-fuzz.yaml  iot-fuzzing.yaml  iot-grey-fuzz.yaml  iot-standard.yaml  iot-test.yaml  simple_tls_check.yaml  standard.yaml  test.yaml
campaigns/trees/: iot.yaml  mqtt.yaml
cmd/orca/: main.go
deploy/: .justfile
deploy/fuzzing/: .Justfile  .gitignore
deploy/fuzzing/aflpp/: Dockerfile  Dockerfile.aflpp
deploy/mosquitto/: .gitignore  Dockerfile  mosquitto.conf
deploy/mqtt/mosquitto/: Dockerfile  Dockerfile.FUME  coverage-tools.sh  mosquitto.conf  run.sh
deploy/telnet/: Dockerfile  inetd.conf
docs/: .Justfile  MODULE.md  POLICY.md  TESTING.md  status.md
docs/kraken/: architecture.d2  component copy.puml  component.puml  documentation.md  requirements.md
docs/siren/: component.puml  documentation.md  requirements.md
docs/trident/: documentation.md  requirements.md
extensions/grpc/tls_checker/: manifest.yaml
internal/adapter/abiplugin/: client_unix.go  client_windows.go
internal/adapter/cliplugin/: client.go
internal/adapter/grpcplugin/: client.go
internal/adapter/jsonreport/: writer.go
internal/adapter/yamlconfig/: loader.go
internal/config/: blueprint.go  campaign.go  loader.go  manifest.go
internal/domain/: attack_tree.go  config.go  entities.go  ports.go  validate.go
internal/entity/: target.go
internal/pipeline/assessor/: assessor.go
internal/pipeline/classifier/: classifier.go
internal/pipeline/planner/: planner.go
internal/pipeline/reporter/: reporter.go
internal/pipeline/scanner/: scanner.go
internal/usecase/: orchestrator.go  provisioner.go  reporter.go  runner.go  scanner.go
kraken/: README.md  go.mod  go.sum  main.go
kraken/internal/domain/: attack_tree.go  campaign.go  config.go  entities.go  finding.go  interfaces.go  module.go  policy.go  policy_test.go  ports.go  runner_config.go  scanner_config.go  target.go  target_test.go  validate.go
kraken/internal/loader/: loader.go  loader_linux.go  loader_unix.go  loader_windows.go
kraken/internal/module/: module.go  registry.go
kraken/internal/modules/: entry.go
kraken/internal/native/: registry.go  registry_test.go
kraken/internal/protocol/: tags.go  tags_test.go
kraken/internal/reporter/: reporter.go
kraken/internal/runner/: executor.go  module_runner.go  policy_integration_test.go  runner.go  runner_integration_test.go  runner_test.go
kraken/internal/scanner/: factory.go  scanner.go  scanner_test.go
kraken/internal/testutil/: certs.go  certs_test.go  mqtt.go  servers.go  servers_test.go
kraken/internal/transport/: conduit.go  conduit_integration_test.go  conduit_test.go  tls.go
kraken/internal/usecase/: reporter.go  runner.go  scanner.go
kraken/pkg/moduleabi/: kraken_module_abi.h  kraken_module_abi_v2.h
kraken/pkg/modulepb/: generate.go  module.proto
kraken/pkg/plugabi/: orca_plugin_abi.h  orca_plugin_abi_v2.h
kraken/pkg/plugpb/: generate.go  plugin.proto
kraken/testdata/campaigns/: basic.yaml  invalid-policy.yaml  missing-duration.yaml  multi-scanner.yaml  templates.yaml
modules/: .gitignore
modules/kraken/: README.md
modules/kraken/abi/: .Justfile
modules/kraken/abi/cert_inspect/: Cargo.toml  README.md
modules/kraken/abi/cert_inspect/src/: lib.rs
modules/kraken/abi/mqtt_acl_probe/: CMakeLists.txt  README.md  mqtt_acl_probe.c
modules/kraken/abi/mqtt_auth_check/: CMakeLists.txt  README.md  mqtt_auth_check.c
modules/kraken/abi/mqtt_replay/: CMakeLists.txt  CVE-2024-8376.txt  README.md  mqtt_replay  mqtt_replay.c
modules/kraken/abi/telnel_default_creds/: CMakeLists.txt  README.md  telnet_default_creds.c
modules/kraken/abi/tls_version_check/: CMakeLists.txt  README.md  tls_version_check.c
pkg/plugabi/: orca_plugin_abi.h
pkg/plugpb/: generate.go  plugin.pb.go  plugin_grpc.pb.go
plugins/: .Justfile  .gitignore
plugins/cert_expiry_check/: CMakeLists.txt  cert_expiry_check.c
plugins/cert_inspect/: Cargo.toml
plugins/cert_inspect/src/: lib.rs
plugins/fuzzing/mqtt/: boofuzz_poc.py  requirements.txt
plugins/kraken/abi/mqtt_auth_check/: CMakeLists.txt  mqtt_auth_check.c
plugins/kraken/abi/telnel_default_creds/: CMakeLists.txt  telnet_default_creds.c
plugins/mqtt_auth_check/: CMakeLists.txt  mqtt_auth_check.c
plugins/telnel_default_creds/: CMakeLists.txt  telnet_default_creds.c
plugins/tls_version_check/: .gitignore  .justfile  CMakeLists.txt  tls_version_check.c
proto/: plugin.proto
resources/scenario-a/: .gitignore  README.md  attack-tree.yaml  campaign.yaml  docker-compose.yaml
resources/scenario-a/config/: acl.conf  mosquitto.conf  passwd
resources/scenario-a/profiles/: README.md
resources/scenario-a/scripts/: generate-certs.sh  generate-passwd.sh  plc-publisher.sh  rtu-publisher.sh  scada-subscriber.sh  seed-topics.sh
results/simple_tls_check/20251001_192755/: summary.txt
results/simple_tls_check/20251001_192802/: summary.txt
siren/: .gitignore  Makefile  README.md  config.all-actions.yaml  config.yaml  go.mod  go.sum  main.go  parsers.go
siren/bpf/: bpf_bpfeb.go
siren/cmd/siren/: main.go  parsers.go
siren/config/: config.go
siren/ebpf/: generate.go  manager.go  runtime.go
siren/ebpf/program/: xdp_proxy.c
siren/intercept/: actions.go  engine.go  rules.go  rules_test.go
siren/internal/client/: tracker.go
siren/internal/config/: config.go
siren/internal/core/: core.go
siren/internal/ebpf/: generate.go  runtime.go
siren/pkg/core/: core.go
siren/proxy/: datagram_proxy.go  proxy.go  proxy_test.go  stream_proxy.go
siren/recorder/: recorder.go
siren/scenarios/: basic_proxy.yaml  corruption.yaml  high_latency.yaml  packet_loss.yaml
siren/scripts/: setup-demo-env.sh
siren/spoof/: arp.go  dns.go
trident/: README.md  go.mod  go.sum
trident/conduit/: conduit.go  logConduit.go  utils.go
trident/plugins/: domain.go
(+156 files in other folders)
