[package]
name = "cert_inspect"
version = "0.1.0"
edition = "2021"

[lib]
name = "cert_inspect"
crate-type = ["cdylib"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
foreign-types-shared = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
